# team19-proxy

./: .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: config.py  db.py  main.py
src/device/: apis.py  repositories.py  schemas.py
src/proxy/: apis.py
