[tool.poetry]
name = "team19-proxy"
version = "0.1.0"
description = ""
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
target-version = ["py311"]

[tool.mypy]
python_version = "3.10"
strict = true
